# easy-read

./: .gitattributes  .gitignore  environment.yml  pyproject.toml
configs/: api.example.yml
resources/templates/: project_config.yml
src/easy_read/: __init__.py  cli.py
src/easy_read/config/: __init__.py  loader.py  prompts.py  schemas.py
src/easy_read/core/: __init__.py  version.py
src/easy_read/pipeline/: __init__.py  runner.py
src/easy_read/project/: __init__.py  manager.py  schemas.py
src/easy_read/stages/: __init__.py  base.py  extract_stage.py  registry.py
src/easy_read/strategies/: __init__.py
src/easy_read/strategies/extractors/: base.py  epub_extractor.py
src/easy_read/utils/: json_io.py  names.py  paths.py
