[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-read"
version = "0.1.0"
description = "A staged book and document translation pipeline."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "ebooklib>=0.18",
    "pymupdf>=1.24.0"
]

[project.scripts]
easy-read = "easy_read.cli:app"

[tool.setuptools.packages.find]
where = ["src"]